--- a/WinPointManagementSystem/src/com/winpoint/batchTracker/fxmls/EditBatchDetailsScreen.fxml
+++ b/WinPointManagementSystem/src/com/winpoint/batchTracker/fxmls/EditBatchDetailsScreen.fxml
@@ -21,7 +21,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="1080.0" maxWidth="1920.0" minHeight="400.0" minWidth="200.0" prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.winpoint.batchTracker.fxmlsControllers.EditBatchDetailsScreenController">
+<BorderPane maxHeight="1080.0" maxWidth="1920.0" minHeight="400.0" minWidth="200.0" prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.winpoint.batchTracker.fxmlsControllers.EditBatchDetailsScreenController">
    <top>
       <AnchorPane prefHeight="60.0" prefWidth="1000.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
          <children>
@@ -256,10 +256,7 @@
                                           <Font name="Calibri Bold Italic" size="24.0" />
                                        </font>
                                     </Text>
-                                    <ComboBox fx:id="lectureTopics" maxWidth="600.0" minHeight="25.0" minWidth="270.0" onAction="#listOfLectureTopics" prefHeight="25.0" prefWidth="270.0" promptText="List of Topics" VBox.vgrow="ALWAYS">
-                                       <cursor>
-                                          <Cursor fx:constant="HAND" />
-                                       </cursor></ComboBox>
+                                    <HBox fx:id="lectureCoverageHBox" prefHeight="43.0" prefWidth="275.0" />
                                  </children>
                                  <padding>
                                     <Insets bottom="5.0" left="5.0" right="5.0" top="10.0" />
