--- a/WinPointManagementSystem/src/com/winpoint/batchScheduler/fxmls/BatchDetails.fxml
+++ b/WinPointManagementSystem/src/com/winpoint/batchScheduler/fxmls/BatchDetails.fxml
@@ -23,7 +23,7 @@
             <Insets bottom="25.0" left="25.0" right="25.0" />
          </BorderPane.margin>
          <children>
-            <Button fx:id="cancel" mnemonicParsing="false" onAction="#cancelFrame" prefHeight="25.0" prefWidth="100.0" text="Cancel" />
+            <Button fx:id="cancel" mnemonicParsing="false" onAction="#cancelClick" prefHeight="25.0" prefWidth="100.0" text="Cancel" />
          </children>
       </HBox>
    </bottom>
