--- a/WinPointManagementSystem/src/com/winpoint/batchScheduler/fxmls/CoursesName.fxml
+++ b/WinPointManagementSystem/src/com/winpoint/batchScheduler/fxmls/CoursesName.fxml
@@ -65,13 +65,13 @@
             <Insets bottom="25.0" left="25.0" right="25.0" />
          </BorderPane.margin>
          <children>
-            <Button fx:id="cancel" mnemonicParsing="false" onAction="#cancelFrame" prefHeight="25.0" prefWidth="100.0" text="Cancel" HBox.hgrow="ALWAYS">
+            <Button fx:id="cancel" mnemonicParsing="false" onAction="#cancelClick" prefHeight="25.0" prefWidth="100.0" text="Cancel" HBox.hgrow="ALWAYS">
                <HBox.margin>
                   <Insets />
                </HBox.margin>
             </Button>
             <Region prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS" />
-            <Button fx:id="email" mnemonicParsing="false" onAction="#emailFrame" prefHeight="25.0" prefWidth="100.0" text="Email" HBox.hgrow="ALWAYS">
+            <Button fx:id="email" mnemonicParsing="false" onAction="#sendEmail" prefHeight="25.0" prefWidth="100.0" text="Email" HBox.hgrow="ALWAYS">
                <HBox.margin>
                   <Insets />
                </HBox.margin>
