--- a/WinPointManagementSystem/src/com/winpoint/batchScheduler/fxmls/EmailUtilityScreen.fxml
+++ b/WinPointManagementSystem/src/com/winpoint/batchScheduler/fxmls/EmailUtilityScreen.fxml
@@ -38,7 +38,7 @@
          </padding>
          <children>
             <Region prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS" />
-            <Button fx:id="setButton" mnemonicParsing="false" onAction="#setFrame" prefHeight="25.0" prefWidth="100.0" text="Set" HBox.hgrow="ALWAYS" />
+            <Button fx:id="setButton" mnemonicParsing="false" onAction="#sendEmail" prefHeight="25.0" prefWidth="100.0" text="Set" HBox.hgrow="ALWAYS" />
             <Region prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS" />
          </children>
       </HBox>
