--- a/WinPointManagementSystem/src/com/winpoint/batchScheduler/fxmls/SignUpForm.fxml
+++ b/WinPointManagementSystem/src/com/winpoint/batchScheduler/fxmls/SignUpForm.fxml
@@ -237,7 +237,7 @@
                                           <Font size="17.0" />
                                        </font>
                                     </Label>
-                                    <TextField fx:id="yearOfGraduation" onAction="#validateYearOfGraduation" prefWidth="500.0" />
+                                    <TextField fx:id="yearOfGraduation" onInputMethodTextChanged="#validateYearOfGraduation" prefWidth="500.0" />
                                  </children>
                                  <VBox.margin>
                                     <Insets left="25.0" />
@@ -263,7 +263,7 @@
                                           <Font size="18.0" />
                                        </font>
                                     </Label>
-                                    <TextField fx:id="experience" onAction="#validateExperience" prefWidth="500.0" />
+                                    <TextField fx:id="experience" onInputMethodTextChanged="#validateExperience" prefWidth="500.0" />
                                  </children>
                                  <VBox.margin>
                                     <Insets left="25.0" />
